--- a/src/styles/components/post.scss
+++ b/src/styles/components/post.scss
@@ -2,10 +2,28 @@
 
 .post-container {
     position: relative;
-    z-index: 999;
     background-color: $lightbg;
     width: 400px;
     height: 600px;
     border-radius: 24px;
     border: 2px solid $blue;
+    overflow: hidden;
+
+    .post-header{
+        width: 100%;
+        height: 12.5%;
+        background-color: $white;
+    }
+
+    .post-body{
+        width: 100%;
+        height: 75%;
+        background-color: $lightbg;
+    }
+
+    .post-footer{
+        width: 100%;
+        height: 12.5%;
+        background-color: $white;
+    }
 }
