--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -2,4 +2,7 @@
 
 #home-post-container {
     margin-top: 350px;
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
 }
